# c-radio_v4_MLX

./: .gitignore  LICENSE  MODEL_NOTICE.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: test.yml
cider_patches/: 0001-layernorm-w8a8-linear.patch  0002-gelu-w8a8-linear.patch  README.md
docs/: acceleration_research.md  api.md  architecture.md  benchmarking.md  cider_runtime.md  conversion.md  coreml_fastkill.md  hf_repo_readme.md  huggingface_upload.md  quantisation.md  security.md
docs/model_cards/: c-radiov4-h-mlx-8bit-affine.md  c-radiov4-h-mlx-cider-w8a8-g128.md  c-radiov4-h-mlx-cider-w8a8-p9999.md  c-radiov4-h-mlx-cider-w8a8.md  c-radiov4-h-mlx-mxfp8.md  c-radiov4-so400m-mlx-8bit-affine.md  c-radiov4-so400m-mlx-cider-w8a8-g128.md  c-radiov4-so400m-mlx-cider-w8a8-p9999.md  c-radiov4-so400m-mlx-cider-w8a8.md  c-radiov4-so400m-mlx-mxfp8.md
scripts/: benchmark_matrix.py  calibrate_smooth_scales.py  coreml_fastkill.py  profile_runtime_segments.py  release_bundle.sh
src/cradio_mlx/: __init__.py  acceleration.py  benchmark.py  cli.py  config.py  convert.py  encoder.py  golden.py  imaging.py  load.py  metrics.py  mlx_so400m.py  modeling.py  outputs.py  prompting.py  quantize.py
src/cradio_mlx/bundles/: __init__.py  manifest.py  save_load.py
tests/: test_acceleration.py  test_benchmark.py  test_cli.py  test_convert.py  test_coreml_fastkill.py  test_encoder.py  test_hf_mapping.py  test_local_parity.py  test_manifest.py  test_metrics.py  test_mlx_so400m.py  test_outputs.py  test_prompting.py  test_quantize.py  test_shapes.py
(+3 files in other folders)
